--- a/presentations/style.css
+++ b/presentations/style.css
@@ -6,3 +6,15 @@
 .two-column-slide{
   height: 1500px;
 }
+
+.svg-image{
+  max-width:  900px;
+  max-height: 600px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 900px;
+  /*height: auto;*/
+  display: block;
+}
